typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__create_one Record out.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: "tree::print(out)"
---
root: struct '_RecordOutputType' #8
├─ [id]: string #0
├─ [name]: string #1
└─ [age]: optional #3
   └─ item: integer #2

