typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__create_one User out.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: "tree::print(out)"
---
root: struct '_UserOutputType' #33
├─ [id]: integer #9
├─ [name]: string #10
└─ [posts]: array '_PostOutputType_excluding_UserToPost[]' #32
   └─ item: struct '_PostOutputType_excluding_UserToPost' #31
      ├─ [id]: integer #14
      └─ [title]: string #15

