typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_first Post out.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: optional '_25__PostOutputType?' #25
└─ item: struct '_PostOutputType' #24
   ├─ [author]: struct '_UserOutputType_excluding___rel_Post_User_1' #23
   │  ├─ [id]: integer #10
   │  └─ [name]: string #11
   ├─ [id]: integer #15
   └─ [title]: string #16

