typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_first Record out.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: "tree::PrintOptions::new().indent_size(3).print(out)"
---
root: optional '_6__RecordOutputType?' #6
└─ item: struct '_RecordOutputType' #5
   ├─ [age]: optional #3
   │  └─ item: integer #2
   ├─ [id]: string #0
   └─ [name]: string #1

