typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_first User out.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: optional '_22__UserOutputType?' #22
└─ item: struct '_UserOutputType' #21
   ├─ [id]: integer #10
   ├─ [name]: string #11
   └─ [posts]: list '_20__PostOutputType_excluding___rel_Post_User_1[]' #20
      └─ item: struct '_PostOutputType_excluding___rel_Post_User_1' #19
         ├─ [id]: integer #15
         └─ [title]: string #16

