typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_many Record out.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: "tree::PrintOptions::new().indent_size(3).print(out)"
---
root: list '_68_RecordWithNestedCount[]' #68
└─ item: struct 'RecordWithNestedCount' #67
   ├─ [age]: optional #3
   │  └─ item: integer #2
   ├─ [id]: string #0
   └─ [name]: string #1

