typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_unique Post out.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: "tree::print(out)"
---
root: optional '_109_PostWithNestedCount?' #109
└─ item: struct 'PostWithNestedCount' #108
   ├─ [id]: integer #51
   ├─ [title]: string #52
   └─ [author]: struct 'User' #50
      ├─ [id]: integer #46
      ├─ [name]: string #47
      └─ [posts]: list '_49_Post[]' #49
         └─ item: &Post #48

