typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_unique User inp.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct #23
└─ [where]: optional '_22_QueryUniqueUserWhereInput?' #22
   └─ item: struct 'QueryUniqueUserWhereInput' #21
      └─ [id]: optional #20
         └─ item: integer #11

